tools/clang/iterator_checker/tests/simple-std-find.txt
simple-std-find.cpp:22:4: error: [iterator-checker] Potentially invalid iterator used.
  *it;
   ^
1 error generated.
